--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,18 +25,51 @@
             font-weight: bold; /* Optional: Make text bold */
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Optional: Add shadow */
         }
+
+        .flash-messages {
+        position: absolute;
+        top: 20px;
+        width: 50%;
+        left: 50%
+        transform: translateX(-50%);
+        z-index: 1000;
+        }
     </style>
 </head>
+
 <body>
 {% block content %}
+<div class="flash-messages">
+        {% with messages = get_flashed_messages(with_categories=True) %}
+            {% if messages %}
+                {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}">
+                      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                      {{ message }}
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+</div>
     <div class="text-center">
         <h1>WORK STAT APP</h1>
         <br>
         <a class="btn btn-success btn-lg" href="{{ url_for('main.login') }}">TO START YOU NEED TO LOG IN</a>
     </div>
 {% endblock %}
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+
+<script>
+        setTimeout(function () {
+            $(".alert").fadeTo(500, 0).slideUp(500, function () {
+                $(this).remove();
+            });
+        }, 5000);
+</script>
 
 </body>
 </html>
