--- a/app/templates/some_page.html
+++ b/app/templates/some_page.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'index.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="justify-content-center">
+    <form action="{{ url_for('main.bulk_import') }}" method="POST" style="display:inline;">
+        <button type="submit" class="btn-success btn-lg">Import from file</button>
+    </form>
+</div>
+
+{% endblock %}
