--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,23 +7,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
     <style>
-        /* Center the container */
         body {
             background-color: #845EC2;
-            margin: 0; /* Remove default margin */
-            height: 100vh; /* Full viewport height */
+            margin: 0;
+            height: 100vh;
             display: flex;
-            justify-content: center; /* Horizontally center */
-            align-items: center; /* Vertically center */
+            justify-content: center;
+            align-items: center;
             margin-bottom: 20px;
         }
 
         h1 {
-            color: white; /* Set text color */
-            font-size: 8rem; /* Larger than Bootstrap display-4 */
+            color: white;
+            font-size: 8rem;
             font-family: 'Arial'
-            font-weight: bold; /* Optional: Make text bold */
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Optional: Add shadow */
+            font-weight: bold;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
 
         .flash-messages {
@@ -38,8 +37,8 @@
 </head>
 
 <body>
-{% block content %}
-<div class="flash-messages">
+
+  <div class="flash-messages">
         {% with messages = get_flashed_messages(with_categories=True) %}
             {% if messages %}
                 {% for category, message in messages %}
@@ -52,7 +51,8 @@
                 {% endfor %}
             {% endif %}
         {% endwith %}
-</div>
+  </div>
+  {% block content %}
     <div class="text-center">
         <h1>WORK STAT APP</h1>
         <br>
